force-app/main/default/objects/Lead/fields/Ad_Area__c.field-meta.xml
<CustomField>
    <fullName>Ad_Area__c</fullName>
    <description>Area ad is targeted (San Diego, Bay Area, Houston, etc)</description>
    <inlineHelpText>Area ad is targeted (San Diego, Bay Area, Houston, etc)</inlineHelpText>
    <label>Ad Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>