force-app/main/default/objects/Lead/fields/Ad_Consented__c.field-meta.xml
<CustomField>
    <fullName>Ad_Consented__c</fullName>
    <label>Ad Consented</label>
    <type>DateTime</type>
</CustomField>