force-app/main/default/objects/Lead/fields/Ad_Content_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Ad_Content_Descriptor__c</fullName>
    <description>Transaction type such as cash out refinance, purchase, refinance</description>
    <inlineHelpText>cash out refinance, purchase, VA refinance, etc.</inlineHelpText>
    <label>Ad Content Descriptor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>