force-app/main/default/objects/Lead/fields/Ad_Description__c.field-meta.xml
<CustomField>
    <fullName>Ad_Description__c</fullName>
    <label>Ad Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>