force-app/main/default/objects/Lead/fields/Ad_Hook__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hook__c</fullName>
    <description>The promotion or hook of the ad (ie Special Purchase Programs)</description>
    <inlineHelpText>Received your inquiry about our ad regarding _____  (special purchase programs)</inlineHelpText>
    <label>Ad Hook</label>
    <length>100</length>
    <type>Text</type>
</CustomField>