force-app/main/default/objects/Lead/fields/Ad_Term__c.field-meta.xml
<CustomField>
    <fullName>Ad_Term__c</fullName>
    <description>Primary term/target of the ad (retiree, self-employed, etc), aligns with the UTM term field.</description>
    <label>Ad Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>