force-app/main/default/objects/Lead/fields/AnnualSavings__c.field-meta.xml
<CustomField>
    <fullName>AnnualSavings__c</fullName>
    <label>Annual Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>