force-app/main/default/objects/Lead/fields/APRScenario2__c.field-meta.xml
<CustomField>
    <fullName>APRScenario2__c</fullName>
    <label>APR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>