force-app/main/default/objects/Lead/fields/Archived_Reason__c.field-meta.xml
<CustomField>
    <fullName>Archived_Reason__c</fullName>
    <label>Archived Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested Do Not Call</fullName>
            </value>
            <value>
                <fullName>Invalid Phone/Email</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Sales/Competitor Inquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opted to Payoff Mortgage</fullName>
            </value>
            <value>
                <fullName>Opted Not to Buy a Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>