force-app/main/default/objects/Lead/fields/AutofillFees__c.field-meta.xml
<CustomField>
    <fullName>AutofillFees__c</fullName>
    <formula>If(AND(ISBLANK(DiscountCreditS2__c), ISBLANK(LenderFeeS2__c), ISBLANK(AppraisalFeeS2__c), ISBLANK(CreditReportFeeS2__c), ISBLANK(EscrowFeesS2__c), ISBLANK(TitleFeeS2__c), ISBLANK(RecordingFeeS2__c), ISBLANK(DiscountCreditS3__c), ISBLANK(LenderFeeS3__c), ISBLANK(AppraisalFeeS3__c), ISBLANK(CreditReportFeeS3__c), ISBLANK(EscrowFeesS3__c), ISBLANK(TitleFeeS3__c), ISBLANK(RecordingFeeS3__c)),TRUE,FALSE)</formula>
    <label>Autofill Fees</label>
    <type>Checkbox</type>
</CustomField>