force-app/main/default/objects/Lead/fields/AutofillTIIH__c.field-meta.xml
<CustomField>
    <fullName>AutofillTIIH__c</fullName>
    <formula>If(AND(ISBLANK(EstimatedTaxesScenario2__c), ISBLANK(EstimatedInsuranceScenario2__c), ISBLANK(EstimatedMortgageInsuranceScenario2__c), ISBLANK(EstimatedHOAScenario2__c), ISBLANK(EstimatedTaxesScenario3__c), ISBLANK(EstimatedInsuranceScenario3__c), ISBLANK(EstimatedMortgageInsuranceScenario3__c), ISBLANK(EstimatedHOAScenario3__c)),TRUE,FALSE)</formula>
    <label>Autofill TIIH</label>
    <type>Checkbox</type>
</CustomField>