force-app/main/default/objects/Lead/fields/BaseIncomeTotal__c.field-meta.xml
<CustomField>
    <fullName>BaseIncomeTotal__c</fullName>
    <formula>BorrowerBaseIncome__c +  CoBorrowerBaseIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Income Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>