force-app/main/default/objects/Lead/fields/BK_Foreclosure_Past_7yrs__c.field-meta.xml
<CustomField>
    <fullName>BK_Foreclosure_Past_7yrs__c</fullName>
    <label>BK / Foreclosure Past 7yrs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>