force-app/main/default/objects/Lead/fields/BonusesTotal__c.field-meta.xml
<CustomField>
    <fullName>BonusesTotal__c</fullName>
    <formula>BorrowerBonuses__c + CoBorrowerBonuses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonuses Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>