force-app/main/default/objects/Lead/fields/Borrower_Age__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Age__c</fullName>
    <label>Age</label>
    <length>14</length>
    <type>Text</type>
</CustomField>