force-app/main/default/objects/Lead/fields/BorrowerBaseIncome__c.field-meta.xml
<CustomField>
    <fullName>BorrowerBaseIncome__c</fullName>
    <label>Borrower Base Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>