force-app/main/default/objects/Lead/fields/BorrowerBonuses__c.field-meta.xml
<CustomField>
    <fullName>BorrowerBonuses__c</fullName>
    <label>Borrower Bonuses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>