force-app/main/default/objects/Lead/fields/BorrowerCommission__c.field-meta.xml
<CustomField>
    <fullName>BorrowerCommission__c</fullName>
    <label>Borrower Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>