force-app/main/default/objects/Lead/fields/BorrowerDivInt__c.field-meta.xml
<CustomField>
    <fullName>BorrowerDivInt__c</fullName>
    <label>Borrower Div/Int</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>