force-app/main/default/objects/Lead/fields/BorrowerNetRent__c.field-meta.xml
<CustomField>
    <fullName>BorrowerNetRent__c</fullName>
    <label>Borrower Net Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>