force-app/main/default/objects/Lead/fields/BorrowerOtherIncome__c.field-meta.xml
<CustomField>
    <fullName>BorrowerOtherIncome__c</fullName>
    <label>Borrower Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>