force-app/main/default/objects/Lead/fields/BorrowerOvertime__c.field-meta.xml
<CustomField>
    <fullName>BorrowerOvertime__c</fullName>
    <label>Borrower Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>