force-app/main/default/objects/Lead/fields/BorrowersIncome__c.field-meta.xml
<CustomField>
    <fullName>BorrowersIncome__c</fullName>
    <formula>BaseIncomeTotal__c + OvertimeTotal__c + BonusesTotal__c + CommissionTotal__c + DividendInterestTotal__c + NetRentTotal__c + OtherTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrowers Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>