force-app/main/default/objects/Lead/fields/Bottom__c.field-meta.xml
<CustomField>
    <fullName>Bottom__c</fullName>
    <formula>TotalMonthlyLiabilities__c/BorrowersIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bottom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>