force-app/main/default/objects/Lead/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carlsbad</fullName>
                <default>true</default>
                <label>Carlsbad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>