force-app/main/default/objects/Lead/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Campaign Name</label>
    <type>TextArea</type>
</CustomField>