force-app/main/default/objects/Lead/fields/CancelMIAtS3__c.field-meta.xml
<CustomField>
    <fullName>CancelMIAtS3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancel MI At (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>