force-app/main/default/objects/Lead/fields/Cash_Out__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out__c</fullName>
    <label>Cash Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A Purch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>