force-app/main/default/objects/Lead/fields/Cashout__c.field-meta.xml
<CustomField>
    <fullName>Cashout__c</fullName>
    <label>Cashout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>