force-app/main/default/objects/Lead/fields/CashoutorRefi__c.field-meta.xml
<CustomField>
    <fullName>CashoutorRefi__c</fullName>
    <label>Cashout or Refi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>