force-app/main/default/objects/Lead/fields/Checking_Assets__c.field-meta.xml
<CustomField>
    <fullName>Checking_Assets__c</fullName>
    <label>Checking Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>