force-app/main/default/objects/Lead/fields/CLTV2__c.field-meta.xml
<CustomField>
    <fullName>CLTV2__c</fullName>
    <formula>(Loan_Amount__c + SecondLoanAmount__c)/Estimated_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>