force-app/main/default/objects/Lead/fields/CLTV__c.field-meta.xml
<CustomField>
    <fullName>CLTV__c</fullName>
    <label>CLTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>