force-app/main/default/objects/Lead/fields/CoBorrower_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Business_Phone__c</fullName>
    <label>B Phone</label>
    <type>Phone</type>
</CustomField>