force-app/main/default/objects/Lead/fields/CoBorrower_Employer__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Employer__c</fullName>
    <label>CB Employer</label>
    <length>55</length>
    <type>Text</type>
</CustomField>