force-app/main/default/objects/Lead/fields/CoBorrower_Est_Income__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Est_Income__c</fullName>
    <label>Mo Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>