force-app/main/default/objects/Lead/fields/CoBorrower_FirstName__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_FirstName__c</fullName>
    <label>First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>