force-app/main/default/objects/Lead/fields/CoBorrower_Greeting__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Greeting__c</fullName>
    <formula>If(!ISBLANK(CoBorrower_Nickname__c), CoBorrower_Nickname__c,  CoBorrower_FirstName__c  )</formula>
    <label>CoBorrower Greeting</label>
    <type>Text</type>
</CustomField>