force-app/main/default/objects/Lead/fields/CoBorrower_Greeting_Name__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Greeting_Name__c</fullName>
    <formula>if(not(isblank(  CoBorrower_Nickname__c )),   CoBorrower_Nickname__c  ,   CoBorrower_FirstName__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoBorrower Greeting Name</label>
    <type>Text</type>
</CustomField>