force-app/main/default/objects/Lead/fields/CoBorrower_Income_Source_New__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Income_Source_New__c</fullName>
    <inlineHelpText>Check all that apply</inlineHelpText>
    <label>Income Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Sources</valueSetName>
    </valueSet>
</CustomField>