force-app/main/default/objects/Lead/fields/CoBorrower_Income_Sources__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Income_Sources__c</fullName>
    <inlineHelpText>Primary Income Source</inlineHelpText>
    <label>Income Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Sources</valueSetName>
    </valueSet>
</CustomField>