force-app/main/default/objects/Lead/fields/CoBorrower_LastName__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_LastName__c</fullName>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>