force-app/main/default/objects/Lead/fields/CoBorrower_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Mobile__c</fullName>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>