force-app/main/default/objects/Lead/fields/CoBorrower_Nickname__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Nickname__c</fullName>
    <label>Nickname</label>
    <length>25</length>
    <type>Text</type>
</CustomField>