force-app/main/default/objects/Lead/fields/CoBorrower_PMOC__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_PMOC__c</fullName>
    <inlineHelpText>Preferred Method of Communication</inlineHelpText>
    <label>CB PMOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>