force-app/main/default/objects/Lead/fields/CoBorrower_Role__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Role__c</fullName>
    <defaultValue>&apos;Co-Borrower&apos;</defaultValue>
    <label>CoBorrower Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Roles</valueSetName>
    </valueSet>
</CustomField>