force-app/main/default/objects/Lead/fields/CoBorrowerBaseIncome__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerBaseIncome__c</fullName>
    <label>Co-Borrower Base Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>