force-app/main/default/objects/Lead/fields/CoBorrowerBonuses__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerBonuses__c</fullName>
    <label>Co-Borrower Bonuses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>