force-app/main/default/objects/Lead/fields/CoBorrowerCommission__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerCommission__c</fullName>
    <label>Co-Borrower Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>