force-app/main/default/objects/Lead/fields/CoBorrowerDivInt__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerDivInt__c</fullName>
    <label>Co-Borrower Div/Int</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>