force-app/main/default/objects/Lead/fields/CoBorrowerNetRent__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerNetRent__c</fullName>
    <label>Co-Borrower Net Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>