force-app/main/default/objects/Lead/fields/CoBorrowerOtherIncome__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerOtherIncome__c</fullName>
    <label>Co-Borrower Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>