force-app/main/default/objects/Lead/fields/CoBorrowerOvertime__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerOvertime__c</fullName>
    <label>Co-Borrower Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>