force-app/main/default/objects/Lead/fields/CommissionTotal__c.field-meta.xml
<CustomField>
    <fullName>CommissionTotal__c</fullName>
    <formula>BorrowerCommission__c + CoBorrowerCommission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>