force-app/main/default/objects/Lead/fields/ConsumerComments__c.field-meta.xml
<CustomField>
    <fullName>ConsumerComments__c</fullName>
    <label>Consumer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>