force-app/main/default/objects/Lead/fields/Convert_By__c.field-meta.xml
<CustomField>
    <fullName>Convert_By__c</fullName>
    <label>Convert By</label>
    <type>Date</type>
</CustomField>