force-app/main/default/objects/Lead/fields/Convert_to_CoBorrower_Contact__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_CoBorrower_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact To Convert Coborrower Info</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Coborrower Contact To Convert)</relationshipLabel>
    <relationshipName>Coborrower_Converted_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>