force-app/main/default/objects/Lead/fields/Convert_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convert To Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must convert to an existing Borrower</errorMessage>
        <filterItems>
            <field>Contact.Contact_Identifier__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Convert To Contact)</relationshipLabel>
    <relationshipName>Converted_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>