force-app/main/default/objects/Lead/fields/Convert_To_Loan__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convert To Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Converted_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>