force-app/main/default/objects/Lead/fields/Created_Date_for_Automation__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_for_Automation__c</fullName>
    <formula>DATEVALUE(Ad_Consented__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date for Automation</label>
    <type>Date</type>
</CustomField>