force-app/main/default/objects/Lead/fields/Current_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Payment__c</fullName>
    <label>Current Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>