force-app/main/default/objects/Lead/fields/Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Term__c</fullName>
    <inlineHelpText>Months</inlineHelpText>
    <label>Current Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>