force-app/main/default/objects/Lead/fields/CurrentProgramRateBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentProgramRateBalance__c</fullName>
    <label>Current Program/Rate/Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>