force-app/main/default/objects/Lead/fields/Daily_Interest_Savings_Scenario_1__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Savings_Scenario_1__c</fullName>
    <formula>( Current_Balance__c *  Current_Rate__c / 365) - (  First_Loan_Amount_Scenario_1__c *   Rate_Scenario_1__c / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates how much interest the borrower is throwing away every DAY they stay in their current loan.</inlineHelpText>
    <label>Daily Interest Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>