force-app/main/default/objects/Lead/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>50</length>
    <type>Text</type>
</CustomField>