force-app/main/default/objects/Lead/fields/DiscountCreditS3__c.field-meta.xml
<CustomField>
    <fullName>DiscountCreditS3__c</fullName>
    <label>Discount/Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>