force-app/main/default/objects/Lead/fields/DividendInterestTotal__c.field-meta.xml
<CustomField>
    <fullName>DividendInterestTotal__c</fullName>
    <formula>BorrowerDivInt__c + CoBorrowerDivInt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend/Interest Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>