force-app/main/default/objects/Lead/fields/Down_Payment_Range__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Range__c</fullName>
    <label>Down Payment Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zero Down</fullName>
            </value>
            <value>
                <fullName>Minimum Down</fullName>
            </value>
            <value>
                <fullName>3% - 20% Down</fullName>
            </value>
            <value>
                <fullName>20 - 40% Down</fullName>
            </value>
            <value>
                <fullName>More than 40% Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>