force-app/main/default/objects/Lead/fields/Email_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email for External Id</label>
    <type>Email</type>
</CustomField>