force-app/main/default/objects/Lead/fields/Estimated_Income__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Income__c</fullName>
    <label>Mo Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>