force-app/main/default/objects/Lead/fields/EstimatedFundstoCloseScenario1__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFundstoCloseScenario1__c</fullName>
    <formula>DownPaymentScenario1__c +(15* EstimatedTaxesScenario1__c)+(6* EstimatedInsuranceScenario1__c )+( First_Loan_Amount_Scenario_1__c * Rate_Scenario_1__c /365*15) + FeeScenario1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Funds to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>