force-app/main/default/objects/Lead/fields/EstimatedFundstoCloseScenario2__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFundstoCloseScenario2__c</fullName>
    <formula>DownPaymentScenario2__c +(15* EstimatedTaxesScenario2__c)+(6* EstimatedInsuranceScenario2__c )+( First_Loan_Amount_Scenario_2__c * Rate_Scenario_2__c /365*15) + FeeScenario2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Funds to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>